<resources>
    <string name="app_name">PowerTask</string>

    <!-- 首页按钮 -->
    <string name="btn_image_task">如何绘制一张图片</string>
    <string name="btn_record_play_task">如何采集播放音频</string>
    <string name="btn_opensles_play_task">使用OpenSL ES播放音频</string>
    <string name="btn_camera_preview_task">如何使用Camera API采集预览</string>
    <string name="btn_aac_hw_encoder_task">如何使用MediaCodec硬件编码AAC</string>
    <string name="btn_aac_ffmepg_encoder_task">如何使用libfdk_aac软件编码AAC（上）</string>
    <string name="btn_libfdk_aac_encoder_task">如何使用libfdk_aac软件编码AAC（下）</string>

    <string name="btn_recorder_task">串联音视频录制流程</string>
    <string name="btn_player_task">串联音视频播放流程</string>

    <string name="btn_task4">解析和封装mp4</string>
    <string name="btn_task5">OpenGL绘制三角形</string>
    <string name="btn_task6">OpenGL 显示一张图片</string>
    <string name="btn_task7">AAC 硬编、硬解</string>
    <string name="btn_task8">H.264 的硬编、硬解</string>
    <string name="btn_task11">OpenGL 高级特性</string>
    <string name="btn_task12">GLSurfaceview预览Camera</string>
    <string name="btn_task13">网络传输协议</string>
    <string name="btn_task14">热门音视频开源项目</string>
    <string name="btn_task15">简易的音视频播放器</string>
    <string name="btn_task16">H264软编</string>
    <string name="btn_task17">RTMP推流</string>
    <string name="btn_task18">短视频APP</string>

    <string name="start_play">start_play</string>
    <string name="stop_play">stop_play</string>

    <string name="start_record">start_record</string>
    <string name="stop_record">stop_record</string>
</resources>
