<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/video_window_background"
    tools:context="com.mlingdu.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:gravity="center">
        <Button
            android:id="@+id/btn_image_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_image_task"/>
        <Button
            android:id="@+id/btn_record_play_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_record_play_task"/>
        <Button
            android:id="@+id/btn_opensles_play_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_opensles_play_task"/>
        <Button
            android:id="@+id/btn_camera_preview_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_camera_preview_task"/>
        <Button
            android:id="@+id/btn_aac_hw_encoder_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_aac_hw_encoder_task"/>
        <Button
            android:id="@+id/btn_aac_ffmepg_encoder_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_aac_ffmepg_encoder_task"/>
        <Button
            android:id="@+id/btn_libfdk_aac_encoder_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_libfdk_aac_encoder_task"/>
        <Button
            android:id="@+id/btn_recorder_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_recorder_task"/>
        <Button
            android:id="@+id/btn_player_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_player_task"/>

        <Button
            android:id="@+id/btn_task4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_task4"/>
        <Button
            android:id="@+id/btn_task5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_task5"/>

        <Button
            android:id="@+id/btn_task6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_task6"/>

        <Button
            android:id="@+id/btn_task7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_task7"/>

        <Button
            android:id="@+id/btn_task8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_task8"/>

        <Button
            android:id="@+id/btn_task10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_task10"/>

        <Button
            android:id="@+id/btn_task11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_task11"/>

        <Button
            android:id="@+id/btn_task12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_task12"/>

        <Button
            android:id="@+id/btn_task13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_task13"/>

        <Button
            android:id="@+id/btn_task14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_task14"/>

        <Button
            android:id="@+id/btn_task15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_task15"/>

        <Button
            android:id="@+id/btn_task16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_task16"/>

        <Button
            android:id="@+id/btn_task17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_task17"/>

        <Button
            android:id="@+id/btn_task18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_task18"/>

    </LinearLayout>

</ScrollView>